<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!--Borrar a partir de aqui -->

    <string name="action_save">Guardar</string>
    <string name="title_activity_detail">Nueva Oportunidad</string>

    <!-- Strings de diálogo personalizado -->
    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Constraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu Contraseña?</string>
    <string name="entrar_boton">ENTRAR</string>
    <string name="cliente_label">Cliente</string>
    <string name="producto_label">Producto</string>
    <string name="fecha_label">Fecha</string>
    <string name="prioridad_label">Prioridad</string>
    <string name="notas_label">Notas</string>
    <string name="notas_hint">Notas</string>
    <string-array name="clientes">
        <item>Fernando Jimenez</item>
        <item>Carlos Fuentes</item>
        <item>Pedro Lopez</item>
    </string-array>
    <string-array name="productos">
        <item>Seguro A</item>
        <item>Seguro B</item>
        <item>Seguro C</item>
    </string-array>
    <string-array name="prioridades">
        <item>Alta</item>
        <item>Media</item>
        <item>Baja</item>
    </string-array>

    <!-- Borrar hasta aqui -->


    <!-- General ################################################################################-->
    <string name="general.title.appName">AppRestaurante</string>
    <string name="general.button.opcionSi">Si</string>
    <string name="general.button.opcionNo">No</string>
    <string name="general.button.opcionCancelar">Cancelar</string>
    <string name="general.button.opcionAgregar">Agregar</string>

    <!--Activity Main ###########################################################################-->
    <string name="main.title.topVisitados">Top Visitados</string>
    <string name="main.title.topPuntuados">Top Puntuados</string>
    <string name="main.title.topEditor">Recomendación del Editor</string>
    <string name="main.button.configuracion">Configuración</string>

    <!--Activity Busqueda #######################################################################-->
    <string name="busqueda.queryHint.criterioBusqueda">Ingresa nombre o categoria...</string>
    <string name="busqueda.text.cercaDeMi">Cerca de mí...</string>

    <!-- Activity Sucursal ######################################################################-->
    <string name="sucursal.button.agregarComentario">Agregar Comentario</string>
    <string name="sucursal.tab.tabUbicacion">Ubicación</string>
    <string name="sucursal.tab.tabComentario">Comentarios</string>
    <string name="sucursal.tab.tabMenu">Menú</string>
    <!-- Mensajes favorito -->
    <string name="sucursal.message.favoritoConfirmarAgregar">¿Desea agregar este lugar a Favoritos?</string>
    <string name="sucursal.message.favoritoConfirmarRemover">¿Desea remover este lugar de favoritos?</string>
    <string name="sucursal.message.favoritoAgregado">Favorito agregado correctamente</string>
    <string name="sucursal.message.favoritoRemovido">Favorito removido correctamente</string>
    <string name="sucursal.message.favoritoError">Ocurrio un error en la edición del favorito</string>
    <!-- Mensajes comentarioo -->
    <string name="sucursal.message.comentarioAgregado">Comentario agregado correctamente</string>
    <string name="sucursal.message.comentarioError">Ocurrio un error en el registro del comentario</string>

    <!-- Dialog Favorito ########################################################################-->
    <string name="dialogFavorito.title.favorito">Favoritos</string>

    <!-- Dialog Comenatario #####################################################################-->
    <string name="dialogComentario.title.comentario">Agregar Comentario</string>
    <string name="dialogComentario.hint.tituloComentario">Titulo del Comentario</string>
    <string name="dialogComentario.hint.textoComentario">Texto del Comentario</string>

</resources>
